// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel when component prop is set to legend renders legend with expected classes 1`] = `
<Fragment>
  <legend
    className="usa-label usa-legend"
  >
    Field Label
  </legend>
</Fragment>
`;

exports[`FormLabel when the type prop isn't set renders label with expected classes 1`] = `
<Fragment>
  <label
    className="usa-label"
  >
    Field Label
  </label>
</Fragment>
`;
